clusters/my-cluster/istio/system/serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-svc-https
  namespace: istio-system
spec:
  hosts:
  - bitbucket.org
  - charts.jetstack.io
  - github.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
